LLVMInterface/LLVMInterface/ManagedContext.h

    template <typename T = ConstantFolder,
        typename Inserter = IRBuilderDefaultInserter>
        class IRBuilder;
    class BasicBlock;
    class PHINode;
struct ManagedContext
{
    llvm::Module* M;
    llvm::LLVMContext* context;
    llvm::Type* stringTy = 0;
    llvm::IRBuilder<>* builder = 0;
    AllocationRemovingPass* arp = 0;

    ManagedContext(const char* name, const char* filename );
    ~ManagedContext();

};
EXTERN_API(llvm::BasicBlock)* createBasicBlock(ManagedContext* ctx, const char* name, llvm::Function* fn);
EXTERN_API(llvm::IRBuilder<>)* CreateIRBuilder(ManagedContext* ctx);
EXTERN_API(void) DisposeIRBuilder(llvm::IRBuilder<>* irb);
EXTERN_API(llvm::PHINode)* createPHINode(ManagedContext* ctx, llvm::Type* ty, uint32_t numCases, llvm::IRBuilder<>* irb);
EXTERN_API(void) addMergePoint(llvm::PHINode* phi, llvm::Value* val, llvm::BasicBlock* prev);
EXTERN_API(bool) isTerminated(llvm::BasicBlock* bb);
EXTERN_API(bool) hasPredecessor(llvm::BasicBlock* bb);
EXTERN_API(uint32_t) countPredecessors(llvm::BasicBlock* bb);
EXTERN_API(void) removeBasicBlock(llvm::BasicBlock* bb);
EXTERN_API(void) getPredecessors(llvm::BasicBlock* curr, llvm::BasicBlock** bbs, uint32_t bbc);
EXTERN_API(void) optimize(ManagedContext* ctx, uint8_t optLvl, uint8_t maxIterations);
EXTERN_API(void) linkTimeOptimization(ManagedContext* ctx);
EXTERN_API(void) forceVectorizationForAllLoops(ManagedContext* ctx, llvm::Function* fn);
EXTERN_API(bool) forceVectorizationForCurrentLoop(ManagedContext* ctx, llvm::BasicBlock* loopBB, llvm::Function* fn);
EXTERN_API(llvm::Value)* createVTable(ManagedContext* ctx, const char* name, llvm::Type* vtableTy, llvm::Function** virtualMethods, uint32_t virtualMethodc);
EXTERN_API(llvm::Value)* getVTable(ManagedContext* ctx, const char* name, llvm::Type* vtableTy, llvm::Function** virtualMethods, uint32_t virtualMethodc, llvm::Value* superVtable);
EXTERN_API(llvm::Type)* getImplicitVTableType(ManagedContext* ctx, const char* name, llvm::Function** virtualMethods, uint32_t virtualMethodc);
EXTERN_API(llvm::Type)* getVTableType(ManagedContext* ctx, const char* name, llvm::Type** fnTypes, uint32_t fnTypec);
EXTERN_API(llvm::Value)* isInst(ManagedContext* ctx, llvm::Value* vtablePtr, const char* typeName, llvm::IRBuilder<>* irb);
EXTERN_API(bool) isAlloca(ManagedContext *ctx, llvm::Value *val);