LLVMCodeGenerator/LLVMCodeGenerator/ManagedContext.cs

        public static void Optimize (IntPtr ctx, byte optLvl, byte maxIterations) {
            optimize(ctx, optLvl, maxIterations);
        }
        public void Optimize (byte optLvl, byte maxIterations) {
            optimize(Instance, optLvl, maxIterations);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void linkTimeOptimization (IntPtr ctx);
        public static void LinkTimeOptimization (IntPtr ctx) {
            linkTimeOptimization(ctx);
        }
        public void LinkTimeOptimization () {
            linkTimeOptimization(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void forceVectorizationForAllLoops (IntPtr ctx, IntPtr fn);
        public static void ForceVectorizationForAllLoops (IntPtr ctx, IntPtr fn) {
            forceVectorizationForAllLoops(ctx, fn);
        }
        public void ForceVectorizationForAllLoops (IntPtr fn) {
            forceVectorizationForAllLoops(Instance, fn);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern bool forceVectorizationForCurrentLoop (IntPtr ctx, IntPtr loopBB, IntPtr fn);
        public static bool ForceVectorizationForCurrentLoop (IntPtr ctx, IntPtr loopBB, IntPtr fn) {
            return forceVectorizationForCurrentLoop(ctx, loopBB, fn);
        }
        public bool ForceVectorizationForCurrentLoop (IntPtr loopBB, IntPtr fn) {
            return forceVectorizationForCurrentLoop(Instance, loopBB, fn);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getVTable (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr vtableTy, IntPtr[] virtualMethods, uint virtualMethodc, IntPtr superVtable);
        public static IntPtr GetVTable (IntPtr ctx, string name, IntPtr vtableTy, IntPtr[] virtualMethods, IntPtr superVtable) {
            return getVTable(ctx, name, vtableTy, virtualMethods, (uint)virtualMethods.Length, superVtable);
        }
        public IntPtr GetVTable (string name, IntPtr vtableTy, IntPtr[] virtualMethods, IntPtr superVtable) {
            return getVTable(Instance, name, vtableTy, virtualMethods, (uint)virtualMethods.Length, superVtable);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getImplicitVTableType (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr[] virtualMethods, uint virtualMethodc);
        public static IntPtr GetImplicitVTableType (IntPtr ctx, string name, IntPtr[] virtualMethods) {
            return getImplicitVTableType(ctx, name, virtualMethods, (uint)virtualMethods.Length);
        }
        public IntPtr GetImplicitVTableType (string name, IntPtr[] virtualMethods) {
            return getImplicitVTableType(Instance, name, virtualMethods, (uint)virtualMethods.Length);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getVTableType (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr[] fnTypes, uint fnTypec);
        public static IntPtr GetVTableType (IntPtr ctx, string name, IntPtr[] fnTypes) {
            return getVTableType(ctx, name, fnTypes, (uint)fnTypes.Length);
        }
        public IntPtr GetVTableType (string name, IntPtr[] fnTypes) {
            return getVTableType(Instance, name, fnTypes, (uint)fnTypes.Length);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr isInst (IntPtr ctx, IntPtr vtablePtr, [MarshalAs(UnmanagedType.LPUTF8Str)]string typeName, IntPtr irb);
        public static IntPtr IsInst (IntPtr ctx, IntPtr vtablePtr, string typeName, IntPtr irb) {
            return isInst(ctx, vtablePtr, typeName, irb);
        }
        public IntPtr IsInst (IntPtr vtablePtr, string typeName, IntPtr irb) {
            return isInst(Instance, vtablePtr, typeName, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern bool isAlloca (IntPtr ctx, IntPtr val);
        public static bool IsAlloca (IntPtr ctx, IntPtr val) {
            return isAlloca(ctx, val);
        }
        public bool IsAlloca (IntPtr val) {
            return isAlloca(Instance, val);
        }
        public static implicit operator IntPtr (ManagedContext inst) {
            return inst != null ? inst.Instance : IntPtr.Zero;
        }
    }
    public class BasicBlock {
        public readonly IntPtr Instance;

        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr createBasicBlock (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr fn);
        public  BasicBlock (IntPtr ctx, string name, IntPtr fn) {
            Instance = createBasicBlock(ctx, name, fn);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern bool isTerminated (IntPtr bb);
        public static bool IsTerminated (IntPtr bb) {
            return isTerminated(bb);
        }
        public bool IsTerminated () {
            return isTerminated(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern bool hasPredecessor (IntPtr bb);
        public static bool HasPredecessor (IntPtr bb) {
            return hasPredecessor(bb);
        }
        public bool HasPredecessor () {
            return hasPredecessor(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern uint countPredecessors (IntPtr bb);
        public static uint CountPredecessors (IntPtr bb) {
            return countPredecessors(bb);
        }
        public uint CountPredecessors () {
            return countPredecessors(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void removeBasicBlock (IntPtr bb);
        public static void RemoveBasicBlock (IntPtr bb) {
            removeBasicBlock(bb);
        }
        public void RemoveBasicBlock () {
            removeBasicBlock(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void getPredecessors (IntPtr curr, IntPtr[] bbs, uint bbc);
        public static void GetPredecessors (IntPtr curr, IntPtr[] bbs) {
            getPredecessors(curr, bbs, (uint)bbs.Length);
        }
        public void GetPredecessors (IntPtr[] bbs) {
            getPredecessors(Instance, bbs, (uint)bbs.Length);
        }
        public static implicit operator IntPtr (BasicBlock inst) {
            return inst != null ? inst.Instance : IntPtr.Zero;
        }
    }
    public class IRBuilder : IDisposable {
        public readonly IntPtr Instance;
        private bool isDisposed = false;

        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr CreateIRBuilder (IntPtr ctx);
        public  IRBuilder (IntPtr ctx) {
            Instance = CreateIRBuilder(ctx);
        }
        ~IRBuilder() {
            Dispose();
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void DisposeIRBuilder (IntPtr irb);
        public void Dispose () {
            if (isDisposed)return; isDisposed = true;
            DisposeIRBuilder(Instance);
        }
        public static implicit operator IntPtr (IRBuilder inst) {
            return inst != null ? inst.Instance : IntPtr.Zero;
        }
    }
    public class PHINode {
        public readonly IntPtr Instance;

        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr createPHINode (IntPtr ctx, IntPtr ty, uint numCases, IntPtr irb);
        public  PHINode (IntPtr ctx, IntPtr ty, uint numCases, IntPtr irb) {
            Instance = createPHINode(ctx, ty, numCases, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void addMergePoint (IntPtr phi, IntPtr val, IntPtr prev);
        public static void AddMergePoint (IntPtr phi, IntPtr val, IntPtr prev) {
            addMergePoint(phi, val, prev);
        }
        public void AddMergePoint (IntPtr val, IntPtr prev) {
            addMergePoint(Instance, val, prev);
        }
        public static implicit operator IntPtr (PHINode inst) {
            return inst != null ? inst.Instance : IntPtr.Zero;
        }
    }
    public class VTable {
        public readonly IntPtr Instance;

        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr createVTable (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr vtableTy, IntPtr[] virtualMethods, uint virtualMethodc);
        public  VTable (IntPtr ctx, string name, IntPtr vtableTy, IntPtr[] virtualMethods) {
            Instance = createVTable(ctx, name, vtableTy, virtualMethods, (uint)virtualMethods.Length);
        }
        public static implicit operator IntPtr (VTable inst) {
            return inst != null ? inst.Instance : IntPtr.Zero;
        }
    }
}
